css/styles.css
/* ... */
        .svg-contact-footer{
        width: 40px;
            height: 40px;
            background-color: #4D5AE5;
            border-radius: 50%;
            padding: 8px;
            display: flex;
            
            overflow: visible;
            transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
        }

                 .svg-contact-footer use {
                     
                     display: block;
                     width: 24px;
                     height: 24px;
        
                 } 

                .svg-contact-footer svg {
                    fill: #f4f4fd;
                }
                 .svg-contact-footer {
                     overflow: visible;
                     width: 40px;
                     height: 40px;
                 }
        
                 .svg-contact-footer:hover,
                .svg-contact-footer:focus {           
        background-color: #31D0AA;
                 }
                .svg-footer {
                    display: flex;
                    gap: 16px;
      
                }        

            .hide-popup{
                opacity: 0;
                pointer-events: none;
                user-select: none;

            
            }

            .hide-popup.is-open {
                opacity: 1;
                    pointer-events: auto;
             }

          .backform  {
            position: fixed;
            z-index: 9999999;
            top: 0;
            left: 0;
            background-color: rgba(46, 47, 66, 0.4);
            height: 100%;
            width: 100%;
            display: flex;
            justify-content: center;
            align-items: center;
        }

          .all-form {
            position: relative;
            width: 408px;
            height: 80%;
            max-height: 584px;
            border-radius: 4px;
            overflow: auto;
            box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
            background-color: #fcfcfc;
            padding-left: 24px;   
            padding-right: 24px;       }


                          .close-popup {
                                     position: absolute;
                                     top: 24px;
                                     right: 24px;
                
                                     width: 24px;
                                     height: 24px;
                
                                     display: flex;
                                     align-items: center;
                                     justify-content: center;
                
                                     padding: 0;
                                     cursor: pointer;
                
                                     background-color: #E7E9FC;
                                     border: 1px solid rgba(0, 0, 0, 0.1);
                                     border-radius: 50%;
                
                                     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                                         border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
                                 }
                
                                 .close-popup-icon {
                                     fill: #2E2F42;
                                     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
                                 }
                
                                 .close-popup:hover,
                                 .close-popup:focus {
                                     background-color: #404BBF;
                                     border-color: transparent;
                                 }
                
                                 .close-popup:hover .close-popup-icon,
                                 .close-popup:focus .close-popup-icon {
                                     fill: #fff;
                                 }



        .name-form {
            font-weight: 500;
                font-size: 16px;
                line-height: 1.5;
                letter-spacing: 0.02em;
                text-align: center;
                color: #2e2f42;
                font-family: "Roboto", sans-serif;
                margin: 72px 0 16px 0;

        }

        .label-input {
            display: block;
            font-weight: 400;
             font-size: 12px;
                /* line-height: 14px; */
                line-height: 1.16667;
                letter-spacing: 0.04em;
                color: #8e8f99;
                margin-bottom: 4px;
        }
         .text-field {
                border: 1px solid rgba(46, 47, 66, 0.4);
            border-radius: 4px;
            width: 100%;
            height: 40px;
            
            background-color: transparent;
            padding-left: 38px;
            transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         }
          .text-field:focus {
                outline: none;
                border-color: #4D5AE5;
                
                 }
 
          .field-icon {
             position: absolute;
             top:50%;
             left:16px;
            transform: translateY(-50%);
            fill: #2E2F42;
            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
           
                        }
            .text-field:focus + .field-icon  { 
            fill:#4D5AE5;
            
           }


          .field-wrapper {
          position: relative;
                                 }

        .accent {
            text-decoration: underline;

        }

        .form-field-wrapper {
            margin-bottom: 8px;
        }
/* ... */

